--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  position:relative;
+  display:inline-block; 
 }
 #footer {
   background-color: #444;
@@ -99,7 +101,7 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 200px;
   width: 100%;
   background-color: #ccc;
 }
@@ -207,7 +209,13 @@ nav h1 a {
   position: absolute;
   width: 50%;
 }
+
+.maps{
+
+}
+
 #restaurant-name {
+  overflow: hidden;
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 20pt;
@@ -225,6 +233,7 @@ nav h1 a {
   margin: 10px 0px;
 }
 #restaurant-cuisine {
+  
   background-color: #333;
   color: #ddd;
   font-size: 12pt;
