--- a/css/styles.css
+++ b/css/styles.css
@@ -273,3 +273,41 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+/**=============Responsividade===========**/
+
+@media handheld, only screen and (max-width:480px){
+    
+    /* .main_div .a{ float:none; position:absolute; top:400px;}
+  .main_div .b{float:none; position:absolute; top:0px;}
+  .main_div .c{float:none; position:absolute; top:200px;}
+    */
+    
+  #restaurant-container{
+
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 140px 40px 30px;
+  }
+    
+  #reviews-container {
+
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 140px 40px 30px;
+    float:none; position:absolute; top:400px;
+  }
+  #reviews-container {
+    padding: 30px 40px 80px;
+  }
+  #reviews-container h2 {
+    color: #f5005e;
+    font-size: 24pt;
+    font-weight: 300;
+    letter-spacing: -1px;
+    padding-bottom: 1pt;
+  }
+  #map-container{
+      float:none; position:absolute; top:0px;
+  }
+}
