--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
-  width: 100%
+  /* width: 100% */
+  overflow:hidden;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -55,6 +56,8 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display: flex;
+  justify-content: center;
 }
 nav h1 {
   margin: auto;
@@ -107,9 +110,11 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  /* height: 50px; */
+  height: auto;
   background-color: #3397DB;
   align-items: center;
+  display: flex;
 }
 .filter-options h2 {
   color: white;
@@ -311,4 +316,12 @@ nav h1 a {
   #map-container{
       float:none; position:absolute; top:0px;
   }
+}
+
+.hide-aria-label{
+  height: 1px;
+  width: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  position: absolute;
 }
