--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,7 @@ nav h1 a {
   bottom: 0;
   position: absolute;
   width: 50%;
+  box-sizing: border-box;
 }
 #restaurant-name {
   color: #f18200;
@@ -249,6 +250,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
+  box-sizing: border-box;
   width: 50%;
 }
 #reviews-container {
@@ -267,7 +269,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -275,6 +277,7 @@ nav h1 a {
   padding: 0 20px 20px;
   position: relative;
   width: 85%;
+  box-sizing: border-box;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -285,42 +288,7 @@ nav h1 a {
 
 /**=============Responsividade===========**/
 
-@media handheld, only screen and (max-width:480px){
-    
-    /* .main_div .a{ float:none; position:absolute; top:400px;}
-  .main_div .b{float:none; position:absolute; top:0px;}
-  .main_div .c{float:none; position:absolute; top:200px;}
-    */
-    
-  #restaurant-container{
-
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 140px 40px 30px;
-  }
-    
-  #reviews-container {
-
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 140px 40px 30px;
-    float:none; position:absolute; top:400px;
-  }
-  #reviews-container {
-    padding: 30px 40px 80px;
-  }
-  #reviews-container h2 {
-    color: #f5005e;
-    font-size: 24pt;
-    font-weight: 300;
-    letter-spacing: -1px;
-    padding-bottom: 1pt;
-  }
-  #map-container{
-      float:none; position:absolute; top:0px;
-  }
-}
-
+@media handheld, only screen and (max-width:600px){  }
 .hide-aria-label{
   height: 1px;
   width: 1px;
